<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/enav_encabeazado"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#D67676"
        android:backgroundTint="#C57676"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#162542">

            <ImageButton
                android:id="@+id/btn_regresar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#E9EDF3"
                android:contentDescription="@string/txt_nav_inicio"
                android:onClick="Inicio2"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/casa" />

            <ImageView
                android:id="@+id/img_nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:contentDescription="@string/txt_nav_img"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_horizontal"
                tools:srcCompat="@drawable/img_horizontal" />

        </TableRow>
    </TableRow>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enav_encabeazado">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_infoG"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_info"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_invitado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_ih"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_contacto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_contact"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_estacionamientos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_est"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_mapa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_map"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:id="@+id/info_fila_6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_como"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoText="false"
                android:background="#CE7BEF8A"
                android:text="@string/txt_how"
                android:textAlignment="center"
                android:textSize="16sp"
                app:autoSizeTextType="none" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_inferior"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#462D6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/nav_abajo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_gif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:adjustViewBounds="true"
                android:contentDescription="@string/txt_nav_gif"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_horizontal"
                tools:srcCompat="@drawable/img_horizontal" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF">

                    <ImageView
                        android:id="@+id/img_inicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt_nav_inicio"
                        android:padding="8dp"
                        app:srcCompat="@drawable/casa"
                        tools:srcCompat="@drawable/casa" />

                    <ImageView
                        android:id="@+id/img_buscar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt_nav_buscar"
                        android:padding="8dp"
                        app:srcCompat="@drawable/lupa"
                        tools:srcCompat="@drawable/lupa" />

                    <ImageView
                        android:id="@+id/img_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt_nav_favoritos"
                        android:padding="8dp"
                        app:srcCompat="@drawable/favorito"
                        tools:srcCompat="@drawable/favorito" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/txt_nav_inicio"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/txt_nav_buscar"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/txt_nav_favoritos"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </TableRow>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>